.devcontainer/test/jinjaboard/errors/macros/bad.yaml.j2
{% macro noop() %}ok{% endmacro %}
{{ totally_undefined }}
